# firefox-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  raw.json
assets/: index.poc.html  list-fftabs.py
assets/test/.mozilla/firefox/rx4oen1q.default/: times.json
examples/: focus.rs  list.rs
scripts/: bumpversion.sh
src/: lib.rs  util.rs
