[package]
name = "firefox-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Firefox browser un-official interface"
repository = "https://github.com/rcastill/firefox-rs"
exclude = [
    "assets",
    "scripts"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
# walkdir = "2"
dirs = "4"
# glob = "0.3"
lz4_flex = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1"